# is-it-open

./: .gitignore  GEMINI.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.gemini/: settings.json
.gemini/hooks/: api-routes.py  backend-health.py  db-schema-summary.py  flutter-env.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml
backend/: Dockerfile  pyproject.toml  sample.env
backend/app/: api.py  settings.py
backend/app/hours/: apps.py  models.py
backend/app/places/: api.py  models.py
backend/app/services/: tomtom.py
backend/apps/calendar/: api.py
backend/apps/hours/: models.py
backend/apps/hours/migrations/: 0001_initial.py
backend/apps/places/: api.py  models.py
backend/apps/places/migrations/: 0001_initial.py  0002_savedplace.py  0003_savedplace_is_pinned.py  0004_savedplace_color_savedplace_icon.py  0007_savedplace_is_check_it_out.py  0008_place_location.py  0009_migrate_lat_lng_to_location.py  0010_remove_place_latitude_remove_place_longitude_and_more.py
backend/apps/users/: admin.py  api.py  auth.py  models.py  tests.py
backend/apps/users/migrations/: 0001_initial.py  0002_userprofile.py  0004_userprofile_home_city_userprofile_home_state_and_more.py
backend/config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/services/: tomtom.py
backend/tests/: check_tomtom.py  test_api.py  test_tomtom.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/test/: test_parser_test.dart  test_user_bug.dart  test_wkst_test.dart
(+98 files in other folders)
